hphp/hack/test/typecheck/bkscStrict1.php
<?hh

<<file: BKSCStrict>>

class A {}

function f(): void {}
